# StainEvaluation

./: CMakeLists.txt  README.md  StainEvaluation.cpp  StainEvaluation.h
